feat(buildkitd): Follow resources convention
Do not set resources defaults. There is no way unset them, so better to leave the defaults blank

--- a/charts/buildkitd/values.yaml
+++ b/charts/buildkitd/values.yaml
@@ -12,13 +12,13 @@ user:
 nameOverride: ""
 fullnameOverride: ""
 
-resources:
-  requests:
-    cpu: "100m"
-    memory: 1Gi
-  limits:
-    cpu: "1"
-    memory: 2Gi
+resources: {}
+#  requests:
+#    cpu: "100m"
+#    memory: 1Gi
+#  limits:
+#    cpu: "1"
+#    memory: 2Gi
 
 extraArgs: []
 
